# tablesalt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  test.yml
libsodium_sys/: Cargo.toml  build.rs
libsodium_sys/src/: lib.rs
src/: lib.rs  sodium.rs
